application/src/main/webapp/css/newlook.css
/* 
    Document   : newlook
    Created on : 2010-okt-28, 13:18:42
    Author     : henrik
*/

.hidden {
    display: none;
}

ul {
    line-height: 14pt;

}

a, a.visited {
    text-decoration: none;
    color: #585c95;
}

body {
    margin: 0px;
    padding: 0px;
    background-color: white;
    text-align: center;
    font-family: Trebuchet MS, Arial, sans-serif;
    font-size: 14px;
    color: #404040;
}

div {
    margin: 0px;
    padding: 0px;
}

button {
    background-color: #585c95;
    color: white;
    text-align: center;
    vertical-align: middle;
    border: 1px solid #404040;
    margin: 0px;
    cursor: pointer;
}

.addsubunit-button {
    margin-top: 15px;
    height: 30px;
}

.dialog-button:disabled {
    background-color: #9da0ca;
    border: 1px solid #808080;
    cursor: default;
}

input {
    vertical-align: top;
}

select {
    width: 466px;
}

img {
    border: 0;
}

h2 {
    margin: 0px;
}

textarea {
    background-color: white;
    border-bottom-style: inset;
    border-bottom-width: 2px;
    border-left-style: inset;
    border-left-width: 2px;
    border-right-style: inset;
    border-right-width: 2px;
    border-top-style: inset;
    border-top-width: 2px;
    color: #404040;
    width: 459px;
    height: 8em;
}

fieldset {
    border: none;
    margin: 0;
    padding: 0;
}

#helpbox{
    height: 200px;
    width: 200px;
    background-color: white;
    border-width: 1px;
    border-style: solid;
    border-color: #404040;
    position: absolute;
    right: 20px;
    top: 20px;
    -webkit-border-radius: 7px;
    -moz-border-radius: 7px;
    border-radius: 7px;
}

#helpbox-header{
    text-align: left;
    padding: 10px;
    background-color: #E8ECF5;
    -webkit-border-radius: 7px 7px 0px 0px;
    -moz-border-radius: 7px 7px 0px 0px;
    border-radius: 7px 7px 0px 0px;
}

#helpbox-content{
    padding: 5px;
}

.helpbox-image{
    padding-right: 5px;
}

.helpbox-listentry{
    padding: 5px;
}

#logo {
    padding-left: 18px;
    padding-top: 18px;
    padding-bottom: 7px;
    height: 51px;
}

#frontpage-box {
    display: table;
}

#frontpage-image-box {
    display: table-cell;
}

#frontpage-information-box {
    display: table-cell;
    vertical-align: top;
    padding-left: 20px;
}

#header-organization-name {
    display: inline;
}

#control-bar {
    display: table;
    width: 100%;
    font-family: Trebuchet MS, Arial, sans-serif;
    font-size: 1em;
    margin: 0px;
    margin-top: 9px;
    height: 24px;
    border-top: 1px solid #404040;
    border-bottom: 1px solid #404040;
    text-align: left;
    white-space: nowrap;
}

#button-bar {
    white-space: nowrap;
    display: table-cell;
    text-align: left;
    padding-left: 18px;
}

#information-bar {
    padding-right: 18px;
    font-size: 13px;
    display: table-cell;
    text-align: right;
}

#page-header {
    background-color: white;
    text-align: left;
    padding-top: 0px;
    padding-left: 0px;
    padding-right: 0px;
    height: 120px;
}

#main {
    border-width: 0;
    top: 111px;
    left: 0;
    margin: 0;
    padding: 0;
    overflow: auto;
    position: absolute;
    min-height: 300px;
    min-width: 1090px;
    z-index: 1;
}

#content {
    padding-left: 18px;
    padding-right: 18px;
    padding-top: 18px;
    padding-bottom: 0px;
    text-align: left;
    /*display: table-cell;

    min-width: 581px;
    width: 100%;
     */
}

#right-column {
    display: table-cell;
    text-align: left;
    width: 298px;
}

#coworker-popup {
    width: 298px;
    max-height: 360px;
    background-color: white;
    border: 1px solid #404040;
}

#newUserDialog {
    left: 100px;
    top: 180px;
}

#updateUserDialog {
    left: 100px;
    top: 180px;
}

#newGoalDialog {
    width: 660px;
    position: fixed;
    left: 100px;
    top: 180px;
    white-space: nowrap;
}

#name-box {
    display: inline-block;
}

.profile-list {
    text-align: left;
    /*max-height: 100% !important;*/
}

#responsibility-share-list {
    white-space: normal;
    padding: 0px;
    min-width: 560px;
    display: table;
}

#responsibility-list {
    /*max-height: 420px;*/
    padding-bottom: 13px;
}

#loginDialog {
    min-width: 300px;
    left: 200px;
}

.tree-view {
    display: table;
}

.tree-column {
    display: table-cell;
    padding-right: 30px;
    line-height: 18px;
    min-width: 300px;
}

#unit-tree-icons{
    position: relative;
    bottom: 4px;
}

.imageonly-button {
    background: none;
    padding: 0;
    margin: 0;
    border: none;
}

#unitsettings-tabs {
    left: 200px;
    top: 140px;
    width: 800px;
    z-index: 500;
}

#unitsettings-header{
    text-align: left;
    font-size: 20px;
    padding-left: 17px;
    padding-top: 5px;
    padding-bottom: 5px;
    border-bottom: 1px solid #DDD;
    border-top: 1px solid #DDD;
    background-color: #E8ECF5;
}
.login-field {
    width: 300px;
}

.dialog-button {
    background-color: #585c95;
    color: white;
    text-align: center;
    vertical-align: middle;
    border: 1px solid #404040;
}

.short-list {
    min-height: 32px !important;
}

.expand-contract {
    position: absolute;
    right: 9px;
    top: 11px;
    display: inline-block;
    cursor: pointer;
}

.super-title {
    font-weight: bold;
    font-size: 1.6em;
}

.field-box {
    display: inline-block;
    vertical-align: top;

}

.field-input-box {
    display: block;
    vertical-align: top;
    text-align: left;
}

.field-label-box {
    /*    font-variant: small-caps;*/
    padding-left: 0px;
    display: block;
    vertical-align: bottom;
    text-align: left;
    margin-top: 9px;
    font-size: 1.1em;
    line-height: 1.4em;
    font-weight: bold;
    color: #606060;
}

.field-preview {
    font-size: 1.07em;
    padding-left: 0px;
    cursor: text;
    display: inline;
    line-height: 1.4em;
}

.headerless-list {
    border: 1px solid #e8ecf5;
    width: 100%;
}

.notice-date {
    display: inline-block;
    margin-left: 0px;
    margin-right: 9px;
    margin-bottom: 5px;
}

.notice-text {
    display: inline-block;
    margin-left: 0px;
    margin-right: 9px;
    margin-bottom: 5px;
}

.popup {
    position: absolute;
    text-align: left;
    min-height: 76px;
    max-height: 228px;
    width: 340px;
    background-color: white;
    z-index: 20;
}

.popup-header {
    background-color: #585c95;
    color: white;
    height: 15px;
    padding: 8px;
    text-align: left;
    vertical-align: middle;
}

.popup-header-text {
    display: table-cell;
    width: 100%;
}

.popup-header-close-box {
    display: table-cell;
    text-align: right;
    width: 35px;
}

.close {
    color: white;
}

.coworker-list-entry {

}

.overdue {
    color: #ad4022;
}

.nearlyoverdue {
    color: #b78a00;
}

.active {

}

.inactive {
    color: #b8bcc5;
    font-style: oblique;
}

.header {
    /*    font-variant: small-caps;*/
    font-size: 1.1em;
    position: relative;
    background-color: #e8ecf5;
    height: 32px;
    white-space: nowrap;
}

.text-header {
    height: 16px;
    padding: 8px;
    text-align: left;
    vertical-align: middle;
    font-weight: bold;
}

.list-body {

    min-height: 114px;
    overflow-y: auto;
    overflow-x: hidden;
    border-left: 1px solid #e8ecf5;
    border-right: 1px solid #e8ecf5;
    padding-top: 5px;
    padding-left: 14px;
    padding-right: 14px;
    padding-bottom: 2px;
    background-color: white;
    position: relative;
}

.list-entry {
    padding-bottom: 5px;
    white-space: nowrap;
}

.list-footer {
    background-color: #e8ecf5;
    padding: 5px;
    margin-bottom: 9px;
    /*    min-height: 21px;*/
}

.report {
    display: table;
    width: 100%;
    padding-bottom: 9px;
}

.report-entry {
    display: table-row;
}

.report-entry-header {
    display: table-cell;
    font-weight: bold;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 9px;
}

.report-entry-content {
    display: table-cell;
    border-top: 1px solid #e8ecf5;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 9px;
}

.responsibility-list-entry {
    display: table-row;
    width: 100%;
}

.responsibility {
    display: table-cell;
    text-align: left;
    padding-bottom: 4px;
    width: 100%;
}

.responsibility-share {
    display: table-cell;
    text-align: left;
    font-weight: bold;
    border-top: 1px solid #e8ecf5;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 9px;
}

.responsibility-list-header {
    border: none;
    font-weight: bold;
}

.text-field {
    background-color: white;
    border-bottom-style: inset;
    border-bottom-width: 2px;
    border-left-style: inset;
    border-left-width: 2px;
    border-right-style: inset;
    border-right-width: 2px;
    border-top-style: inset;
    border-top-width: 2px;
    color: #404040;
    width: 460px;
    height: 15px;
    /*    margin: 5px;*/
}

.digits-3 {
    width: 3em;
}

.digits-6 {
    width: 6em;
}

#modalizer {
    background-color: white;
    z-index: 10;
    top: 111px;
    left: 0;
    position: fixed;
    width: 100%;
    height: 100%;
}

#responsibilities {
    display: inline-block;
}

#function-list {
    white-space: nowrap;
}

.function-list-entry {
    display: block;
}

.function-list-cell {
    display: inline-block;
    min-width: 233px;
}

.unit-list-entry, .goaltask-list-entry {
    display: block;
}

.unit-list-cell, .goal-list-cell {
    display: inline-block;
    min-width: 233px;
}

.task-list-cell {
    display: inline-block;
    white-space: nowrap;
}

.report {
    max-height: none;
}

.report-notes {
    padding-left: 5px;
    padding-right: 9px;
    padding-top: 9px;
    padding-bottom: 9px;
}

.filter-field {
    margin: 5px;
}

.top-button {
    background-color: white;
    color: black;
    border: none;
    padding-left: 0;
    cursor: pointer;
    font-weight: bold;
    font-size: 13px;
    height: 24px;
    min-width: 46px;
}

.top-button:disabled {
    color: gray;
    cursor: default;
}

.dialog-field {
    width: 300px;
}

#saveButtonBox {
    height: 32px;
    margin-top: 8px;
    vertical-align: bottom;
}

#super_task_chooser-box, #title-box {
    border: 0;
    margin: 0;
    padding: 0;
}

.goals_tasks_dialog_segment {
    margin-right: 10px;
}

#unitsettings-general-tablink {
    color: #585c95;
    cursor: pointer;
}

.unitsettings {
    padding-left: 18px;
    padding-right: 18px;
    padding-top: 18px;
    padding-bottom: 0px;
    text-align: left;
}

